# Ejecta-X

./: .gitignore  build_so.bat  copy_win32_runtime.bat  docs.txt  gen_sln.bat
project/android/: AndroidManifest.xml  build.gradle
project/android/assets/www/: index.js
project/android/gradle/wrapper/: gradle-wrapper.properties
project/android/jni/: Android_ejecta.mk  Application.mk  ejecta.cpp
project/windows/: CMakeLists.txt
project/windows/Ejecta-X/: CMakeLists.txt  Ejecta-X.cpp  Ejecta-X.vcxproj  Ejecta-X.vcxproj.filters  stdafx.h
sources/ejecta/: EJApp.cpp  EJApp.h  EJSharedOpenGLContext.cpp  EJSharedOpenGLContext.h
sources/ejecta/EJCanvas/: EJBindingCanvas.cpp  EJBindingCanvas.h  EJBindingImage.cpp  EJCanvasContext.cpp  EJCanvasContext.h  EJTexture.cpp
sources/ejecta/EJCanvas/2D/: EJCanvasContextScreen.h  EJCanvasContextTexture.cpp  EJCanvasContextTexture.h  EJFont.cpp  EJFont.h  EJGLProgram2D.cpp  EJGLProgram2D.h  EJImageData.h  EJPath.cpp  EJPath.h
sources/ejecta/EJCanvas/2D/Shaders/: Flat.fsh  Texture.fsh  Vertex.vsh
sources/ejecta/EJCocoa/: NSString.cpp
sources/ejecta/EJCocoa/support/: NSPlatformMacros.h
sources/ejecta/EJUtils/: EJBindingHttpRequest.cpp  EJFile.cpp  EJFile.h
